--- a/WebApp/Views/Customers/Details.cshtml
+++ b/WebApp/Views/Customers/Details.cshtml
@@ -4,5 +4,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
+<h2>Dob: @Model.Dob</h2>
+<h2>Name: @Model.Name</h2>
+<h2>Membership Type: @Model.MembershipType.Name</h2>
+    
 
