--- a/WebApp/Views/Customers/Index.cshtml
+++ b/WebApp/Views/Customers/Index.cshtml
@@ -32,7 +32,7 @@ else
             {
                 <tr>
                     <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
-                    <td>@customer.MembershipType.Name</td>
+                    <td>@customer.MembershipType.DiscountRate</td>
                 </tr>
             }
         </tbody>
