--- a/WebApp/Content/Site.css
+++ b/WebApp/Content/Site.css
@@ -22,3 +22,10 @@ select,
 textarea {
     max-width: 280px;
 }
+
+span.field-validation-error {
+color: red !important;
+}
+span.input-validation-error {
+border: 2px solid red !important;
+}
