--- a/WebApp/Views/Customers/Details.cshtml
+++ b/WebApp/Views/Customers/Details.cshtml
@@ -4,8 +4,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Dob: @Model.Name</h2>
-@*<h2>Name: @Model.Name</h2>
-    <h2>Membership Type: @Model.MembershipType.Name</h2>*@
+<h2>Name: @Model.Name</h2>
+<h2>DOB: @Model.Birthday</h2>
+@*<ul>
+
+        <li>Membership Type: @Model.MembershipType.Name</li>
+            @if (Model.Birthdate.HasValue)
+        {
+             <li>Birthdate: @Model.Birthdate.Value.ToShortDateString()</li>
+         }
+
+    </ul> *@
     
 
